--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -56,4 +56,5 @@
 	@import 'layout/banner';
 	@import 'layout/footer';
 	@import 'layout/menu';
-	@import 'layout/pagination'
+	@import 'layout/pagination';
+	@import 'layout/single'
