--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -22,6 +22,7 @@
     {{ template "_internal/opengraph.html" . }}
     {{ template "_internal/schema.html" . }}
     {{ template "_internal/google_news.html" . }}
+    <link rel="stylesheet" href="/css/magnific-popup.css"/>
   </head>
   <body>
 
@@ -50,7 +51,9 @@
     <script src="/js/util.js"></script>
     <!--[if lte IE 8]><script src="/js/ie/respond.min.js"></script><![endif]-->
     <script src="/js/main.js"></script>
-    <!-- Uncomment if you want to setup search 
+    <script src="/js/jquery.magnific-popup.min.js"></script>
+    <script src="/js/img-popup.js"></script>
+    <!-- Uncomment if you want to setup search
       <script src="js/vendor/lunr.min.js"></script>
       -->
   </body>
