--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,7 +1,8 @@
 <header id="header">
   <a href="/" class="logo">{{ .Site.Title }}</a>
   <ul class="icons">
-    
+
     {{ partial "lang.html" . }}
+    {{ partial "social-media.html" . }}
   </ul>
 </header>
